--- a/perekladachka.html
+++ b/perekladachka.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="h1">
-            <h1>Розклад занять для перекладачки</h1>
+            <h1>Розклад занять для перекладачки (1тиж)</h1>
         </div>
         <nav>
             <ul>
@@ -20,6 +20,8 @@
         </nav>
     </header>
     <div class="rozklad">
+      <a href="perekladachka.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+      <a href="perekladachkayellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
       <h3>Понеділок</h3>
         <table>
             <thead>
@@ -41,9 +43,9 @@
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>ПІ-Д</td>
+              <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
+              <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
               <td>3</td>
@@ -89,23 +91,23 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>Всі</td>
+                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>ПІ-Д</td>
-                  <td class="red">Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td>Всі</td>
+                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>Всі</td>
+                  <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/77295015229?pwd=JwS6dh4GgbMAcHpHfjabaDvVJstENc.1https://us04web.zoom.us/j/77295015229?pwd=JwS6dh4GgbMAcHpHfjabaDvVJstENc.1">Натисніть</a> <h4 style="color: black;">Код доступу 7hVd4j</h4></td>
                 </tr> 
                 <tr>
                   <td>4</td>
@@ -142,17 +144,12 @@
                   </tr>
                 </thead>
                 <tr>
-                  <td rowspan="2">1</td>
-                  <td rowspan="2">08:30-09:50</td>
-                  <td>ПІ-Д</td>
-                  <td>Філософія_ Лісовський Петро Миколайович (лекція)</td>
-                  <td><a href="https://us02web.zoom.us/j/6968348272?pwd=cTJKMElWUXRtd0dkcUVPenIwTVc0dz09&omn=81411586208" target="_blank">Натисніть</a></td>
+                  <td>1</td>
+                  <td>08:30-09:50</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                 </tr> 
-                <tr>
-                  <td>КІ, ПІ-К</td>
-                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
-                </tr>
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
@@ -170,16 +167,16 @@
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>Всі</td>
+                  <td>Бази даних (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td>ПІ-Д, КІ, ПІ-К</td>
-                  <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
-                  <td><a href="">Натисніть???</a></td>
+                  <td>Всі</td>
+                  <td>Іноземна мова за професійним спрямуванням (практична)</td>
+                  <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -233,8 +230,8 @@
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>Права людини та верховенство права в сучасних реаліях (практична)_ Сердюк Є.В.</td>
+                  <td><a href="https://us04web.zoom.us/j/78000421504?pwd=XSBVGaZrZcOBdxahKbOsaaRpJfYwTr.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -257,35 +254,30 @@
                   </tr>
                 </thead>
                 <tr>
-                  <td rowspan="2">1</td>
-                  <td rowspan="2">08:30-09:50</td>
-                  <td>ПІ-Д</td>
-                  <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
+                  <td>1</td>
+                  <td>08:30-09:50</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                 </tr> 
-                <tr>
-                    <td>КІ</td>
-                    <td>Надійність, діагностика та експлуатація комп’ютерних систем_ Савостін-Косяк Данило Олександрович </td>
-                    <td><a href="https://us05web.zoom.us/j/8292861261?pwd=LzVHYkRiN1lwYWhnUENYSHFiSjMvQT09" target="_blank">Натисніть</a></td>
-                  </tr> 
                 <tr>
                   <td rowspan="2">2</td>
                   <td rowspan="2">10:00-11:20</td>
-                  <td>ПІ-Д, ПІ-К(?)</td>
-                  <td>Web-програмування_ Богун Роман Ігорович (лекція) </td>
-                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
+                  <td>ПІ-Д</td>
+                  <td class="red">Бази даних_ Міронов Юрій Глібович (лекція) </td>
+                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
-                    <td>КІ, ПІ-К</td>
-                    <td>Бази даних_ Міронов Юрій Глібович (лекція) </td>
-                    <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
+                    <td>Всі</td>
+                    <td>Операційні системи (практична)_ Храпачевський Ігор Володимирович </td>
+                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                   </tr>
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>Всі</td>
+                  <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
+                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>4</td>
@@ -309,7 +301,62 @@
                     <td></td>
                   </tr> 
                 </table>
-      <h4><i>Розклад було оновлено 6 вересня о 09:30</i></h4>
+                <!-------------------------------------->
+              <h3>Субота</h3>
+              <table>
+                  <thead>
+                    <tr>
+                      <th>№</th>
+                      <th>Час</th>
+                      <th>Групи</th>
+                      <th>Дисципліна</th>
+                      <th>Zoom</th>
+                    </tr>
+                  </thead>
+                  <tr>
+                    <td>1</td>
+                    <td>08:30-09:50</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr> 
+                  <tr>
+                    <td>2</td>
+                    <td>10:00-11:20</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>11:40-13:00</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr> 
+                  <tr>
+                    <td>4</td>
+                    <td>13:10-14:30</td>
+                    <td>ПІ-Д</td>
+                    <td>Філософія (практична) </td>
+                    <td><a href="">Натисніть???</a></td>
+                  </tr> 
+                  <tr>
+                    <td>5</td>
+                    <td>14:40-16:10</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr> 
+                  <tr>
+                      <td>6</td>
+                      <td>16:10-17:30</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr> 
+                  </table>
+      <h4><i>Розклад було оновлено 8 вересня о 20:00</i></h4>
     </div>
 </body>
 </html>
