--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -169,7 +169,7 @@
                   <td>4</td>
                   <td>13:10-14:30</td>
                   <td>Всі</td>
-                  <td>Бази даних (лекція)</td>
+                  <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
