--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -230,8 +230,8 @@
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td></td>
-                  <td>Права людини та верховенство права в сучасних реаліях (практична)_ Сердюк Є.В.</td>
+                  <td>КІ, ПІ-К</td>
+                  <td>Права людини та верховенство права в сучасних реаліях (практична)_ Сердюк Євгеній В.</td>
                   <td><a href="https://us04web.zoom.us/j/78000421504?pwd=XSBVGaZrZcOBdxahKbOsaaRpJfYwTr.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
