--- a/perekladachka.html
+++ b/perekladachka.html
@@ -168,14 +168,14 @@
                   <td>4</td>
                   <td>13:10-14:30</td>
                   <td>Всі</td>
-                  <td>Бази даних (лекція)</td>
+                  <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td>Всі</td>
-                  <td>Іноземна мова за професійним спрямуванням (практична)</td>
+                  <td>Іноземна мова за професійним спрямуванням_ Домніч Леся Миколаївна (практична)</td>
                   <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1">Натисніть</a></td>
                 </tr> 
                 <tr>
