--- a/perekladachka.html
+++ b/perekladachka.html
@@ -338,7 +338,7 @@
                     <td>4</td>
                     <td>13:10-14:30</td>
                     <td>ПІ-Д</td>
-                    <td>Філософія (практична) </td>
+                    <td>Філософія_ Лісовський Петро Миколайович (практична) </td>
                     <td><a href="">Натисніть???</a></td>
                   </tr> 
                   <tr>
