--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Перекладачка</title>
+    <title>Розклад занять КІ-21-1фмб</title>
     <link rel="stylesheet" href="rozklad.css">
 </head>
 <body>
