--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -45,7 +45,7 @@
               <td>10:00-11:20</td>
               <td>КІ, ПІ-К</td>
               <td>Права людини та верховенство права в сучасних реаліях_ Фаст Олексій Олександрович (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a></td>
+              <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a> або <a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
             </tr> 
             </tr>
             <tr>
