--- a/ki-21-1fmbyellow.html
+++ b/ki-21-1fmbyellow.html
@@ -42,7 +42,7 @@
               <td>2</td>
               <td>10:00-11:20</td>
               <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a> або <a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
+              <td><a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
               <td>3</td>
