--- a/indexyellow.html
+++ b/indexyellow.html
@@ -96,8 +96,8 @@
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td>Операційні системи (практична)  </td>
-                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
+                  <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>4</td>
@@ -150,14 +150,14 @@
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td></td>
-                  <td></td>
+                  <td>Операційні системи (практична)  </td>
+                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td></td>
-                  <td></td>
+                  <td>Web-програмування (лекція) </td>
+                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -240,14 +240,14 @@
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td></td>
-                  <td></td>
+                  <td>Web-програмування (лекція) </td>
+                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td></td>
-                  <td></td>
+                  <td>Web-програмування (практична) </td>
+                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>5</td>
