--- a/perekladachka.html
+++ b/perekladachka.html
@@ -273,18 +273,23 @@
                   <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                   </tr>
                 <tr>
-                  <td>3</td>
-                  <td>11:40-13:00</td>
+                  <td rowspan="2">3</td>
+                  <td rowspan="2">11:40-13:00</td>
                   <td>Всі</td>
                   <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
+                  <td>ПІ-Д</td>
+                  <td>Web-програмування_ доцент Богун Роман Ігорович (лекція) </td>
+                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
+                </tr> 
+                <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>ПІ-Д</td>
+                  <td>Web-програмування_ доцент Богун Роман Ігорович (практична) </td>
+                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>5</td>
