--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -45,7 +45,7 @@
               <td>10:00-11:20</td>
               <td>КІ, ПІ-К</td>
               <td>Права людини та верховенство права в сучасних реаліях_ Фаст Олексій Олександрович (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
+              <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a> або <a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
             </tr> 
             </tr>
             <tr>
@@ -175,9 +175,9 @@
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>ПІ-Д</td>
+                    <td>Web-програмування_ доцент Богун Роман Ігорович (лекція) </td>
+                    <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -274,19 +274,25 @@
                   <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                   </tr>
                 <tr>
-                  <td>3</td>
-                  <td>11:40-13:00</td>
-                  <td>Всі</td>
-                  <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
-                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
-                </tr> 
-                <tr>
-                  <td>4</td>
-                  <td>13:10-14:30</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr> 
+                  <tr>
+                    <td rowspan="2">3</td>
+                    <td rowspan="2">11:40-13:00</td>
+                    <td>Всі</td>
+                    <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
+                    <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
+                  </tr> 
+                  <tr>
+                    <td>ПІ-Д</td>
+                    <td>Web-програмування_ доцент Богун Роман Ігорович (лекція) </td>
+                    <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
+                  </tr> 
+                  <tr>
+                    <td>4</td>
+                    <td>13:10-14:30</td>
+                    <td>ПІ-Д</td>
+                    <td>Web-програмування_ доцент Богун Роман Ігорович (практична) </td>
+                    <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
+                  </tr> 
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
