--- a/perekladachka.html
+++ b/perekladachka.html
@@ -104,7 +104,7 @@
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>11:40-13:00</td>
+                  <td><p class='red'>11:30</p>-13:00</td>
                   <td>Всі</td>
                   <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
