--- a/ki-21-1fmbyellow.html
+++ b/ki-21-1fmbyellow.html
@@ -94,7 +94,7 @@
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>11:40-13:00</td>
+                  <td><p class='red'>11:30</p>-13:00</td>
                   <td>Операційні системи (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
                 </tr> 
