--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -264,8 +264,8 @@
                 <tr>
                   <td rowspan="2">2</td>
                   <td rowspan="2">10:00-11:20</td>
-                  <td>ПІ-Д</td>
-                  <td class="red">Бази даних_ Міронов Юрій Глібович (лекція) </td>
+                  <td></td>
+                  <td class="red"><!--Бази даних_ Міронов Юрій Глібович (практична)--> </td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
