--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -262,13 +262,13 @@
                   <td></td>
                 </tr> 
                 <tr>
-                  <td rowspan="2">2</td>
-                  <td rowspan="2">10:00-11:20</td>
-                  <td></td>
-                  <td class="red"><!--Бази даних_ Міронов Юрій Глібович (практична)--> </td>
-                  <td><!--<a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a>--></td>
+                  <td>2</td>
+                  <td>10:00-11:20</td>
+                  <!--<td></td>
+                  <td class="red">Бази даних_ Міронов Юрій Глібович (практична) </td>
+                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr>
-                <tr>
+                <tr>-->
                     <td>Всі</td>
                     <td>Операційні системи (практична)_ Храпачевський Ігор Володимирович </td>
                   <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
