--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <td>2</td>
               <td>10:00-11:20</td>
               <td>Філософія (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
+              <td><a href="https://us02web.zoom.us/j/89205411799?pwd=AmY8C6VkURPTV6yDZIMDdZSpthvGra.1" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
               <td>3</td>
@@ -294,7 +294,7 @@
                       <td>4</td>
                       <td>13:10-14:30</td>
                       <td>Філософія (практична) </td>
-                      <td><a href="">Натисніть???</a></td>
+                      <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
                     </tr> 
                     <tr>
                       <td>5</td>
@@ -310,7 +310,7 @@
                       </tr> 
                     </table>
                 </table>
-      <h4><i>Розклад було оновлено 8 вересня о 21:00</i></h4>
+      <h4><i>Розклад було оновлено 11 вересня о 19:50</i></h4>
     </div>
 </body>
 </html>
