--- a/indexyellow.html
+++ b/indexyellow.html
@@ -42,7 +42,7 @@
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
-              <td>Архітектура комп'ютерів (практична)</td>
+              <td>Архітектура комп'ютерів (лекція)</td>
               <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
             </tr>
             <tr>
@@ -54,8 +54,8 @@
             <tr>
               <td>4</td>
               <td>13:10-14:30</td>
-              <td></td>
-              <td></td>
+              <td>Архітектура комп'ютерів (практична)</td>
+              <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>5</td>
@@ -294,7 +294,7 @@
                       <td>4</td>
                       <td>13:10-14:30</td>
                       <td>Філософія (практична) </td>
-                      <td><a href="">Натисніть???</a></td>
+                      <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
                     </tr> 
                     <tr>
                       <td>5</td>
@@ -310,7 +310,7 @@
                       </tr> 
                     </table>
                 </table>
-      <h4><i>Розклад було оновлено 8 вересня о 21:00</i></h4>
+      <h4><i>Розклад було оновлено 11 вересня о 19:50</i></h4>
     </div>
 </body>
 </html>
