--- a/ki-21-1fmbyellow.html
+++ b/ki-21-1fmbyellow.html
@@ -65,8 +65,8 @@
             <tr>
                 <td>6</td>
                 <td>16:10-17:30</td>
-                <td></td>
-                <td></td>
+                <td>Архітектура комп’ютерів (лекція)</td>
+                <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
               </tr> 
             </table>
             <!-------------------------------------->
@@ -260,7 +260,7 @@
                     <td></td>
                   </tr> 
                 </table>
-      <h4><i>Розклад було оновлено 8 вересня о 21:00</i></h4>
+      <h4><i>Розклад було оновлено 11 вересня о 20:00</i></h4>
     </div>
 </body>
 </html>
