--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -72,9 +72,9 @@
             <tr>
                 <td>6</td>
                 <td>16:10-17:30</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Всі</td>
+                <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
               </tr> 
             </table>
             <!-------------------------------------->
