--- a/perekladachka.html
+++ b/perekladachka.html
@@ -36,14 +36,14 @@
             <tr>
               <td>1</td>
               <td>08:30-09:50</td>
-              <td>ПІ-Д</td>
+              <td>ПІ-Д, ПІ-К</td>
               <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
-              <td>ПІ-Д</td>
+              <td>ПІ-Д, ПІ-К</td>
               <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr>
@@ -342,9 +342,9 @@
                   <tr>
                     <td>4</td>
                     <td>13:10-14:30</td>
-                    <td>ПІ-Д</td>
+                    <td>ПІ-Д, ПІ-К</td>
                     <td>Філософія_ Лісовський Петро Миколайович (практична) </td>
-                    <td><a href="">Натисніть???</a></td>
+                    <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
                   </tr> 
                   <tr>
                     <td>5</td>
