--- a/perekladachka.html
+++ b/perekladachka.html
@@ -37,14 +37,14 @@
               <td>1</td>
               <td>08:30-09:50</td>
               <td>ПІ-Д, ПІ-К</td>
-              <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
+              <td>Філософія_ Женжера Сергій Володимирович  (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
               <td>ПІ-Д, ПІ-К</td>
-              <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
+              <td>Філософія_ Женжера Сергій Володимирович  (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89205411799?pwd=AmY8C6VkURPTV6yDZIMDdZSpthvGra.1" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
@@ -231,7 +231,7 @@
                   <td>14:40-16:10</td>
                   <td>КІ, ПІ-К</td>
                   <td>Права людини та верховенство права в сучасних реаліях_ Сердюк Євгеній В. (практична)</td>
-                  <td><a href="https://us04web.zoom.us/j/78000421504?pwd=XSBVGaZrZcOBdxahKbOsaaRpJfYwTr.1" target="_blank">Натисніть</a></td>
+                  <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -343,7 +343,7 @@
                     <td>4</td>
                     <td>13:10-14:30</td>
                     <td>ПІ-Д, ПІ-К</td>
-                    <td>Філософія_ Лісовський Петро Миколайович (практична) </td>
+                    <td>Філософія_ Женжера Сергій Володимирович (практична) </td>
                     <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
                   </tr> 
                   <tr>
