--- a/perekladachka.html
+++ b/perekladachka.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Перекладачка</title>
+    <title>Розклад занять (1тиж)</title>
     <link rel="stylesheet" href="rozklad.css">
 </head>
 <body>
     <header>
         <div class="h1">
-            <h1>Розклад занять для перекладачки (1тиж)</h1>
+            <h1>Розклад занять (1тиж)</h1>
         </div>
         <nav>
             <ul>
-                <a href="perekladachka.html">Перекладачка</a>
+                <a href="perekladachka.html">Об'єднаний розклад</a>
                 <a href="index.html">ПІ-22-1-ict</a>
                 <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
             </ul>
@@ -91,21 +91,21 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td><p class='red'>11:30-13:00</p></td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
                 </tr> 
@@ -160,7 +160,7 @@
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
@@ -174,7 +174,7 @@
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Іноземна мова за професійним спрямуванням_ Домніч Леся Миколаївна (практична)</td>
                   <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1">Натисніть</a></td>
                 </tr> 
@@ -261,21 +261,16 @@
                   <td></td>
                 </tr> 
                 <tr>
-                  <td rowspan="2">2</td>
-                  <td rowspan="2">10:00-11:20</td>
-                  <td>ПІ-Д</td>
-                  <td class="red">Бази даних_ Міронов Юрій Глібович (лекція) </td>
-                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
-                </tr>
-                <tr>
-                    <td>Всі</td>
+                  <td>2</td>
+                  <td>10:00-11:20</td>
+                    <td>ПІ-Д, ПІ-К, КІ</td>
                     <td>Операційні системи (практична)_ Храпачевський Ігор Володимирович </td>
                   <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                   </tr>
                 <tr>
                   <td rowspan="2">3</td>
                   <td rowspan="2">11:40-13:00</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
