--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Перекладачка</title>
+    <title>Розклад занять (2тиж)</title>
     <link rel="stylesheet" href="rozklad.css">
 </head>
 <body>
     <header>
         <div class="h1">
-            <h1>Розклад занять для перекладачки (2тиж)</h1>
+            <h1>Розклад занять (2тиж)</h1>
         </div>
         <nav>
             <ul>
-                <a href="perekladachkayellow.html">Перекладачка</a>
+                <a href="perekladachkayellow.html">Об'єднаний розклад</a>
                 <a href="indexyellow.html">ПІ-22-1-ict</a>
                 <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
             </ul>
@@ -72,7 +72,7 @@
             <tr>
                 <td>6</td>
                 <td>16:10-17:30</td>
-                <td>Всі</td>
+                <td>ПІ-Д, ПІ-К, КІ</td>
                 <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
               </tr> 
@@ -92,21 +92,21 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td><p class='red'>11:30-13:00</p></td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
                 </tr> 
@@ -161,7 +161,7 @@
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td>Всі</td>
+                  <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
@@ -269,7 +269,7 @@
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>-->
-                    <td>Всі</td>
+                    <td>ПІ-Д, ПІ-К, КІ</td>
                     <td>Операційні системи (практична)_ Храпачевський Ігор Володимирович </td>
                   <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                   </tr>
@@ -277,7 +277,7 @@
                   <tr>
                     <td rowspan="2">3</td>
                     <td rowspan="2">11:40-13:00</td>
-                    <td>Всі</td>
+                    <td>ПІ-Д, ПІ-К, КІ</td>
                     <td>Бази даних_ Міронов Юрій Глібович (практична) </td>
                     <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                   </tr> 
@@ -363,7 +363,7 @@
                       <td></td>
                     </tr> 
                   </table>
-      <h4><i>Розклад було оновлено 11 вересня о 20:00</i></h4>
+      <h4><i>Розклад було оновлено 21 вересня о 10:00</i></h4>
     </div>
 </body>
 </html>
