--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -15,7 +15,7 @@
             <ul>
                 <a href="perekladachkayellow.html">Об'єднаний розклад</a>
                 <a href="indexyellow.html">ПІ-22-1-ict</a>
-                <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
+                <!--a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a-->
             </ul>
         </nav>
     </header>
