--- a/indexyellow.html
+++ b/indexyellow.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <a href="perekladachkayellow.html">Перекладачка</a>
+                <a href="perekladachkayellow.html">Об'єднаний розклад</a>
                 <a href="indexyellow.html">ПІ-22-1-ict</a>
                 <!--a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a-->
             </ul>
