--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <a href="perekladachka.html">Перекладачка</a>
+                <a href="perekladachka.html">Об'єднаний розклад</a>
                 <a href="index.html">ПІ-22-1-ict</a>
                 <!--a href="ki-21-1fmb.html">КІ-21-1фмб</a-->
             </ul>
