--- a/perekladachka.html
+++ b/perekladachka.html
@@ -107,7 +107,7 @@
                   <td><p class='red'>11:30-13:00</p></td>
                   <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Операційні системи_ Зайцев Володимир Григорович (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
+                  <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1" target="_blank">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
                 </tr> 
                 <tr>
                   <td>4</td>
@@ -339,7 +339,7 @@
                     <td>13:10-14:30</td>
                     <td>ПІ-Д, ПІ-К</td>
                     <td>Філософія_ Женжера Сергій Володимирович (практична) </td>
-                    <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
+                    <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827" target="_blank">Натисніть</a></td>
                   </tr> 
                   <tr>
                     <td>5</td>
