--- a/perekladachka.html
+++ b/perekladachka.html
@@ -176,7 +176,7 @@
                   <td>14:40-16:10</td>
                   <td>ПІ-Д, ПІ-К, КІ</td>
                   <td>Іноземна мова за професійним спрямуванням_ Домніч Леся Миколаївна (практична)</td>
-                  <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1">Натисніть</a></td>
+                  <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -265,7 +265,7 @@
                   <td>10:00-11:20</td>
                     <td>ПІ-Д, ПІ-К, КІ</td>
                     <td>Операційні системи (практична)_ Храпачевський Ігор Володимирович </td>
-                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
+                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09" target="_blank">Натисніть</a></td>
                   </tr>
                 <tr>
                   <td rowspan="2">3</td>
