--- a/perekladachka.html
+++ b/perekladachka.html
@@ -339,7 +339,7 @@
                     <td>13:10-14:30</td>
                     <td>ПІ-Д, ПІ-К</td>
                     <td>Філософія_ Женжера Сергій Володимирович (практична) </td>
-                    <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827" target="_blank">Натисніть</a></td>
+                    <td><a href="https://us04web.zoom.us/j/71044840456?pwd=4dZ7lUhGuRry4LbRHeUpDz0Bqb6ncs.1" target="_blank">Натисніть</a></td>
                   </tr> 
                   <tr>
                     <td>5</td>
