--- a/indexyellow.html
+++ b/indexyellow.html
@@ -294,7 +294,7 @@
                       <td>4</td>
                       <td>13:10-14:30</td>
                       <td>Філософія (практична) </td>
-                      <td><a href="https://us04web.zoom.us/j/2832995360?pwd=wMo0nHmxOZ2xdgKGAVUz8GHpRsHXBQ.1&omn=73589304827">Натисніть</a></td>
+                      <td><a href="https://us04web.zoom.us/j/71044840456?pwd=4dZ7lUhGuRry4LbRHeUpDz0Bqb6ncs.1">Натисніть</a></td>
                     </tr> 
                     <tr>
                       <td>5</td>
