--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <a href="perekladachka.html">Об'єднаний розклад</a>
                 <a href="index.html">ПІ-22-1-ict</a>
-                <!--a href="ki-21-1fmb.html">КІ-21-1фмб</a-->
+                <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
             </ul>
         </nav>
     </header>
