--- a/ki-21-1fmbyellow.html
+++ b/ki-21-1fmbyellow.html
@@ -241,7 +241,7 @@
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td class="red">Бази даних (практична)</td>
+                  <td>Бази даних (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
