--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <tr>
                       <td>4</td>
                       <td>13:10-14:30</td>
-                      <td>Філософія (практична) </td>
+                      <td>Філософія (семінарське) </td>
                       <td><a href="https://us04web.zoom.us/j/71044840456?pwd=4dZ7lUhGuRry4LbRHeUpDz0Bqb6ncs.1">Натисніть</a></td>
                     </tr> 
                     <tr>
