--- a/ki-21-1fmbyellow-eupore.html
+++ b/ki-21-1fmbyellow-eupore.html
@@ -205,7 +205,7 @@
                 <tr>
                   <td>5</td>
                   <td>13:40-15:10</td>
-                  <td>Права людини та верховенство права в сучасних реаліях (практична)</td>
+                  <td>Права людини та верховенство права в сучасних реаліях (семінарське)</td>
                   <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
