--- a/perekladachka.html
+++ b/perekladachka.html
@@ -230,7 +230,7 @@
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td>КІ, ПІ-К</td>
-                  <td>Права людини та верховенство права в сучасних реаліях_ Сердюк Євгеній В. (практична)</td>
+                  <td>Права людини та верховенство права в сучасних реаліях_ Сердюк Євгеній В. (семінарське)</td>
                   <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
