--- a/perekladachka.html
+++ b/perekladachka.html
@@ -338,7 +338,7 @@
                     <td>4</td>
                     <td>13:10-14:30</td>
                     <td>ПІ-Д, ПІ-К</td>
-                    <td>Філософія_ Женжера Сергій Володимирович (практична) </td>
+                    <td>Філософія_ Женжера Сергій Володимирович (семінарське) </td>
                     <td><a href="https://us04web.zoom.us/j/71044840456?pwd=4dZ7lUhGuRry4LbRHeUpDz0Bqb6ncs.1" target="_blank">Натисніть</a></td>
                   </tr> 
                   <tr>
