--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -231,7 +231,7 @@
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td>КІ, ПІ-К</td>
-                  <td>Права людини та верховенство права в сучасних реаліях_ Сердюк Євгеній В. (практична)</td>
+                  <td>Права людини та верховенство права в сучасних реаліях_ Сердюк Євгеній В. (семінарське)</td>
                   <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
@@ -345,7 +345,7 @@
                     <td>4</td>
                     <td>13:10-14:30</td>
                     <td>ПІ-Д, ПІ-К</td>
-                    <td>Філософія_ Женжера Сергій Володимирович  (практична) </td>
+                    <td>Філософія_ Женжера Сергій Володимирович  (семінарське) </td>
                     <td><a href="https://us04web.zoom.us/j/71044840456?pwd=4dZ7lUhGuRry4LbRHeUpDz0Bqb6ncs.1" target="_blank">Натисніть</a></td>
                   </tr> 
                   <tr>
