--- a/ki-21-1fmbyellow-eupore.html
+++ b/ki-21-1fmbyellow-eupore.html
@@ -7,262 +7,264 @@
     <link rel="stylesheet" href="rozklad.css">
 </head>
 <body>
-    <header>
-        <div class="h1">
-            <h1>Розклад занять КІ-21-1фмб-EU (2тиж)</h1>
-        </div>
-        <nav>
-            <ul>
-                <a href="perekladachkayellow.html">Об'єднаний розклад</a>
-                <a href="indexyellow.html">ПІ-22-1-ict</a>
-                <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
-            </ul>
-        </nav>
-    </header>
-    <div class="rozklad">
-      <a href="ki-21-1fmb.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
-      <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a><br><br>
-      <a href="ki-21-1fmb-eupore.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень-EU</a>
-      <a href="ki-21-1fmbyellow-eupore.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень-EU</a>
-        <h3>Понеділок</h3>
-        <table>
-            <thead>
-              <tr>
-                <th>№</th>
-                <th>Час</th>
-                <th>Дисципліна</th>
-                <th>Zoom</th>
-              </tr>
-            </thead>
-            <tr>
-              <td>1</td>
-              <td>07:30-08:50</td>
-              <td></td>
-              <td></td>
-            </tr> 
-            <tr>
-              <td>2</td>
-              <td>09:00-10:20</td>
-              <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>10:40-12:00</td>
-              <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
-              <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a></td>
-            </tr> 
-            <tr>
-              <td>4</td>
-              <td>12:10-13:30</td>
-              <td></td>
-              <td></td>
-            </tr> 
-            <tr>
-              <td>5</td>
-              <td>13:40-15:10</td>
-              <td></td>
-              <td></td>
-            </tr> 
-            <tr>
-                <td>6</td>
-                <td>15:10-16:30</td>
-                <td>Архітектура комп’ютерів (лекція)</td>
-                <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
-              </tr> 
-            </table>
-            <!-------------------------------------->
-            <h3>Вівторок</h3>
-            <table>
-                <thead>
-                  <tr>
-                    <th>№</th>
-                    <th>Час</th>
-                    <th>Дисципліна</th>
-                    <th>Zoom</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>1</td>
-                  <td>07:30-08:50</td>
-                  <td>Архітектура комп’ютерів (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
-                </tr> 
-                <tr>
-                  <td>2</td>
-                  <td>09:00-10:20</td>
-                  <td>Архітектура комп’ютерів (практична)</td>
-                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td><p class='red'>10:30-12:00</p></td>
-                  <td>Операційні системи (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
-                </tr> 
-                <tr>
-                  <td>4</td>
-                  <td>12:10-13:30</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>5</td>
-                  <td>13:40-15:10</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                    <td>6</td>
-                    <td>15:10-16:30</td>
-                    <td></td>
-                    <td></td>
-                  </tr> 
-                </table>
-                <!-------------------------------------->
-                <h3>Середа</h3>
-            <table>
-                <thead>
-                  <tr>
-                    <th>№</th>
-                    <th>Час</th>
-                    <th>Дисципліна</th>
-                    <th>Zoom</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>1</td>
-                  <td>07:30-08:50</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>2</td>
-                  <td>09:00-10:20</td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>10:40-12:00</td>
-                  <td>Бази даних (лекція) </td>
-                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
-                </tr> 
-                <tr>
-                  <td>4</td>
-                  <td>12:10-13:30</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>5</td>
-                  <td>13:40-15:10</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                    <td>6</td>
-                    <td>15:10-16:30</td>
-                    <td></td>
-                    <td></td>
-                  </tr> 
-                </table>
-                <!-------------------------------------->
-                <h3>Четвер</h3>
-            <table>
-                <thead>
-                  <tr>
-                    <th>№</th>
-                    <th>Час</th>
-                    <th>Дисципліна</th>
-                    <th>Zoom</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>1</td>
-                  <td>07:30-08:50</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>2</td>
-                  <td>09:00-10:20</td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>10:40-12:00</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>4</td>
-                  <td>12:10-13:30</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>5</td>
-                  <td>13:40-15:10</td>
-                  <td>Права людини та верховенство права в сучасних реаліях (семінарське)</td>
-                  <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
-                </tr> 
-                <tr>
-                    <td>6</td>
-                    <td>15:10-16:30</td>
-                    <td></td>
-                    <td></td>
-                  </tr> 
-                </table>
-                <!-------------------------------------->
-                <h3>П'ятниця</h3>
-              <table>
-                <thead>
-                  <tr>
-                    <th>№</th>
-                    <th>Час</th>
-                    <th>Дисципліна</th>
-                    <th>Zoom</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>1</td>
-                  <td>07:30-08:50</td>
-                  <td></td>
-                    <td></td>
-                </tr> 
-                <tr>
-                  <td>2</td>
-                  <td>09:00-10:20</td>
-                  <td>Операційні системи (практична)  </td>
-                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>10:40-12:00</td>
-                  <td>Бази даних (практична)</td>
-                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
-                </tr> 
-                <tr>
-                  <td>4</td>
-                  <td>12:10-13:30</td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>5</td>
-                  <td>13:40-15:10</td>
-                  <td></td>
-                </tr> 
-                <tr>
-                    <td>6</td>
-                    <td>15:10-16:30</td>
-                    <td></td>
-                    <td></td>
-                  </tr> 
-                </table>
-      <h4><i>Розклад було оновлено 21 вересня о 10:00</i></h4>
+<header>
+    <div class="h1">
+        <h1>Розклад занять КІ-21-1фмб-EU (2тиж)</h1>
     </div>
+    <nav>
+        <ul>
+            <a href="perekladachkayellow.html">Об'єднаний розклад</a>
+            <a href="indexyellow.html">ПІ-22-1-ict</a>
+            <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
+        </ul>
+    </nav>
+</header>
+<h2 id="date"></h2>
+<script src="index.js"></script>
+<div class="rozklad">
+    <a href="ki-21-1fmb.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+    <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a><br><br>
+    <a href="ki-21-1fmb-eupore.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень-EU</a>
+    <a href="ki-21-1fmbyellow-eupore.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень-EU</a>
+    <h3>Понеділок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>07:30-08:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>09:00-10:20</td>
+            <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
+            <td><a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>10:40-12:00</td>
+            <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
+            <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>12:10-13:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>13:40-15:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>15:10-16:30</td>
+            <td>Архітектура комп’ютерів (лекція)</td>
+            <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Вівторок</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>07:30-08:50</td>
+            <td>Архітектура комп’ютерів (лекція)</td>
+            <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>09:00-10:20</td>
+            <td>Архітектура комп’ютерів (практична)</td>
+            <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td><p class='red'>10:30-12:00</p></td>
+            <td>Операційні системи (лекція)</td>
+            <td><a href="https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1https://us04web.zoom.us/j/74756876487?pwd=hOh0VxblqZN6bY7QQXg4sWtyXhWvO6.1">Натисніть</a> <h4 style="color: black;">Код доступу k28Gee</h4></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>12:10-13:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>13:40-15:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>15:10-16:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Середа</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>07:30-08:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>09:00-10:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>10:40-12:00</td>
+            <td>Бази даних (лекція) </td>
+            <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>12:10-13:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>13:40-15:10</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>15:10-16:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>Четвер</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>07:30-08:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>09:00-10:20</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>10:40-12:00</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>12:10-13:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>13:40-15:10</td>
+            <td>Права людини та верховенство права в сучасних реаліях (семінарське)</td>
+            <td><a href="https://us04web.zoom.us/j/78757656164?pwd=HEeaSPB79zLqsByOpR4wabVDiTwnZS.1" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>15:10-16:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <!-------------------------------------->
+    <h3>П'ятниця</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+        </tr>
+        </thead>
+        <tr>
+            <td>1</td>
+            <td>07:30-08:50</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>09:00-10:20</td>
+            <td>Операційні системи (практична)  </td>
+            <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>10:40-12:00</td>
+            <td>Бази даних (практична)</td>
+            <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>12:10-13:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>13:40-15:10</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>15:10-16:30</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <h4><i>Розклад було оновлено 15.10 12:30</i></h4>
+</div>
 </body>
 </html>
