--- a/indexyellow.html
+++ b/indexyellow.html
@@ -291,7 +291,7 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
+            <tr style="display: none">
                 <td>4</td>
                 <td>13:10-14:30</td>
                 <td>Філософія (семінарське) </td>
