--- a/perekladachka.html
+++ b/perekladachka.html
@@ -21,7 +21,7 @@
 </header>
 <h2 id="date"></h2>
 <script src="index.js"></script>
-<div class="rozklad">
+<div class="rozklad" >
     <a href="perekladachka.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
     <a href="perekladachkayellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
     <h3>Понеділок</h3>
@@ -228,7 +228,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="display: none">
             <td>5</td>
             <td>14:40-16:10</td>
             <td>КІ, ПІ-К</td>
