--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -229,7 +229,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="display: none">
             <td>5</td>
             <td>14:40-16:10</td>
             <td>КІ, ПІ-К</td>
@@ -343,7 +343,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="display: none">
             <td>4</td>
             <td>13:10-14:30</td>
             <td>ПІ-Д, ПІ-К</td>
@@ -367,5 +367,6 @@
     </table>
     <h4><i>Розклад було оновлено 15.10 12:30</i></h4>
 </div>
+
 </body>
 </html>
