--- a/ki-21-1fmb-eupore.html
+++ b/ki-21-1fmb-eupore.html
@@ -204,7 +204,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="display: none">
             <td>5</td>
             <td>13:40-15:10</td>
             <td>Права людини та верховенство права в сучасних реаліях (семінарське)</td>
