--- a/perekladachka.html
+++ b/perekladachka.html
@@ -24,6 +24,7 @@
 <div class="rozklad" >
     <a href="perekladachka.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
     <a href="perekladachkayellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <h2 style="color: red;">Розклад на 1 тиждень більше не актуальний. Перейдіть до розкладу на 2 тижні.</h2>
     <h3>Понеділок</h3>
     <table>
         <thead>
