--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <div class="rozklad">
     <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
     <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
+    <h2 style="color: red; background-color: white;">Розклад на 1 тиждень більше не актуальний. Перейдіть до розкладу на 2 тижні.</h2>
+
     <h3>Понеділок</h3>
     <table>
         <thead>
