--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -26,6 +26,8 @@
     <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a><br><br>
     <a href="ki-21-1fmb-eupore.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень-EU</a>
     <a href="ki-21-1fmbyellow-eupore.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень-EU</a>
+    <h2 style="color: red; background-color: white;">Розклад на 1 тиждень більше не актуальний. Перейдіть до розкладу на 2 тижні.</h2>
+
     <h3>Понеділок</h3>
     <table>
         <thead>
