--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="perekladachka.html">Об'єднаний розклад</a>
             <a href="index.html">ПІ-22-1-ict</a>
             <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>
         </ul>
     </nav>
 </header>
@@ -25,8 +26,6 @@
 <div class="rozklad">
     <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
     <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
-    <h2 style="color: red; background-color: white;">Розклад на 1 тиждень більше не актуальний. Перейдіть до розкладу на 2 тижні.</h2>
-
     <h3>Понеділок</h3>
     <table>
         <thead>
