--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -16,6 +16,7 @@
             <a href="perekladachka.html">Об'єднаний розклад</a>
             <a href="index.html">ПІ-22-1-ict</a>
             <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>
         </ul>
     </nav>
 </header>
@@ -26,8 +27,6 @@
     <a href="ki-21-1fmbyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a><br><br>
     <a href="ki-21-1fmb-eupore.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень-EU</a>
     <a href="ki-21-1fmbyellow-eupore.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень-EU</a>
-    <h2 style="color: red; background-color: white;">Розклад на 1 тиждень більше не актуальний. Перейдіть до розкладу на 2 тижні.</h2>
-
     <h3>Понеділок</h3>
     <table>
         <thead>
@@ -206,7 +205,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="display: none">
             <td>5</td>
             <td>14:40-16:10</td>
             <td>Права людини та верховенство права в сучасних реаліях (семінарське)</td>
