--- a/ki-21-1fmbyellow.html
+++ b/ki-21-1fmbyellow.html
@@ -16,6 +16,7 @@
             <a href="perekladachkayellow.html">Об'єднаний розклад</a>
             <a href="indexyellow.html">ПІ-22-1-ict</a>
             <a href="ki-21-1fmbyellow.html">КІ-21-1фмб</a>
+            <a href="icpyt.html">Заліки та іспити</a>
         </ul>
     </nav>
 </header>
